--- a/InvMe/InvMe/View/LoginPage.xaml
+++ b/InvMe/InvMe/View/LoginPage.xaml
@@ -7,7 +7,7 @@
         <RelativeLayout Padding="0">
             <Image
             Aspect="AspectFill"
-            Source="loginbackground.jpg"
+            Source="loginbackground.jpeg"
             RelativeLayout.WidthConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Width}"
             RelativeLayout.HeightConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Height}">
             </Image>
