--- a/InvMe/InvMe/View/HashtagsPage.xaml
+++ b/InvMe/InvMe/View/HashtagsPage.xaml
@@ -39,6 +39,9 @@
             </Grid>
             <BoxView HeightRequest="1" BackgroundColor="Black" HorizontalOptions="FillAndExpand" Margin="15,0,15,0"/>
             <ListView BackgroundColor="Transparent" ItemsSource="{Binding Bindablehashtags}" IsPullToRefreshEnabled="True" Refreshing="HashtagsListView_Refreshing" x:Name="hashtagsListView" ItemTapped="HashtagsListView_ItemTapped">
+                <ListView.Header>
+                    <Label x:Name="joinedEventNoItemLabel" Text="No item found..." HorizontalOptions="Start" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"></Label>
+                </ListView.Header>
                 <ListView.ItemTemplate>
                     <DataTemplate>
                       <customControls:ExtendedViewCell SelectedBackgroundColor="Transparent">
