--- a/InvMe/InvMe/View/HomePage.xaml
+++ b/InvMe/InvMe/View/HomePage.xaml
@@ -5,52 +5,56 @@
              Title="Events"
              xmlns:customControls="clr-namespace:BLL.Xamarin.CustomRenderers;assembly=BLL.Xamarin">
     <ContentPage.Content>
-            <StackLayout>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <Label Text="Hashtag" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" FontSize="25" TextColor="Gray" Style="{StaticResource NormalLabelStyle}"/>
-                    <Label Text="Town/Online" x:Name="townImage" Grid.Row="2" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" FontSize="25" TextColor="Gray" Style="{StaticResource NormalLabelStyle}"/>
-                    <Entry x:Name="hashtagEntry" Grid.Row="0" Grid.Column="1" Style="{StaticResource NormalEntryStyle}" HorizontalOptions="Fill"></Entry>
-                    <Switch x:Name="onlineSwitch" Toggled="onlineSwitch_Toggled" Grid.Row="1" Grid.Column="1"></Switch>
-                    <Label Grid.Row="1" Grid.Column="0" Text="Online" VerticalOptions="Center" HorizontalOptions="Center" Style="{StaticResource NormalLabelStyle}"></Label>
-                    <Entry IsVisible="True" x:Name="townEntry" Grid.Row="2" Grid.Column="1" Style="{StaticResource NormalEntryStyle}" HorizontalOptions="Fill"></Entry>
-                    <Button x:Name="addButton" Text="Search" Clicked="Button_Clicked" Grid.Row="3" Grid.ColumnSpan="2" Style="{StaticResource NormalButtonStyle}"></Button>
-                </Grid>
-                <ListView RowHeight="100" ItemTapped="eventListView_ItemTapped" ItemsSource="{Binding bindableEventList}" x:Name="eventListView" IsPullToRefreshEnabled="True" Refreshing="EventListView_Refreshing">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <customControls:ExtendedViewCell SelectedBackgroundColor="Transparent">
-                                <Grid BackgroundColor="White">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition></RowDefinition>
-                                        <RowDefinition></RowDefinition>
-                                        <RowDefinition></RowDefinition>
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto"></ColumnDefinition>
-                                        <ColumnDefinition Width="Auto"></ColumnDefinition>
-                                    </Grid.ColumnDefinitions>
-                                    <StackLayout Orientation="Vertical" Spacing="0" VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="0" Grid.Row="0" Grid.RowSpan="3">
-                                        <Label Text="{Binding MONTH}" TextColor="Gray" HorizontalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
-                                        <Label Text="{Binding DAY}" TextColor="Gray" FontSize="35" HorizontalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
-                                    </StackLayout>
-                                    <Label Text="{Binding TIME}" Grid.Row="0" Grid.Column="1" HorizontalOptions="Start" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
-                                    <Label Text="{Binding EVENTNAME}" TextColor="Gray" FontSize="Large" Grid.Row="1" Grid.Column="1" HorizontalOptions="Start" VerticalOptions="End" Style="{StaticResource NormalLabelStyle}"/>
-                                    <Label Text="{Binding TOWN}" TextColor="Gray" FontSize="Large" Grid.Row="2" Grid.Column="1" HorizontalOptions="Start" VerticalOptions="Start" Style="{StaticResource NormalLabelStyle}"/>
-                                </Grid>
-                            </customControls:ExtendedViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackLayout>
+        <StackLayout>
+            <Button x:Name="filterButton" Clicked="FilterButton_Clicked" Text="Filter" Style="{StaticResource NormalButtonStyle}"></Button>
+            <Grid x:Name="filterGrid" IsVisible="False">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Label Text="Hashtag" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" FontSize="25" TextColor="Gray" Style="{StaticResource NormalLabelStyle}"/>
+                <Label Text="Town/Online" x:Name="townImage" Grid.Row="2" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" FontSize="25" TextColor="Gray" Style="{StaticResource NormalLabelStyle}"/>
+                <Entry x:Name="hashtagEntry" Grid.Row="0" Grid.Column="1" Style="{StaticResource NormalEntryStyle}" HorizontalOptions="Fill"></Entry>
+                <Switch x:Name="onlineSwitch" Toggled="onlineSwitch_Toggled" Grid.Row="1" Grid.Column="1"></Switch>
+                <Label Grid.Row="1" Grid.Column="0" Text="Online" VerticalOptions="Center" HorizontalOptions="Center" Style="{StaticResource NormalLabelStyle}"></Label>
+                <Entry IsVisible="True" x:Name="townEntry" Grid.Row="2" Grid.Column="1" Style="{StaticResource NormalEntryStyle}" HorizontalOptions="Fill"></Entry>
+                <Button x:Name="addButton" Text="Search" Clicked="Button_Clicked" Grid.Row="3" Grid.ColumnSpan="2" Style="{StaticResource NormalButtonStyle}"></Button>
+            </Grid>
+            <ListView RowHeight="100" ItemTapped="eventListView_ItemTapped" ItemsSource="{Binding bindableEventList}" x:Name="eventListView" IsPullToRefreshEnabled="True" Refreshing="EventListView_Refreshing">
+                <ListView.Header>
+                    <Label x:Name="joinedEventNoItemLabel" Text="No item found..." HorizontalOptions="Start" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"></Label>
+                </ListView.Header>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <customControls:ExtendedViewCell SelectedBackgroundColor="Transparent">
+                            <Grid BackgroundColor="White">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <StackLayout Orientation="Vertical" Spacing="0" VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="0" Grid.Row="0" Grid.RowSpan="3">
+                                    <Label Text="{Binding MONTH}" TextColor="Gray" HorizontalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
+                                    <Label Text="{Binding DAY}" TextColor="Gray" FontSize="35" HorizontalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
+                                </StackLayout>
+                                <Label Text="{Binding TIME}" Grid.Row="0" Grid.Column="1" HorizontalOptions="Start" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
+                                <Label Text="{Binding EVENTNAME}" TextColor="Gray" FontSize="Large" Grid.Row="1" Grid.Column="1" HorizontalOptions="Start" VerticalOptions="End" Style="{StaticResource NormalLabelStyle}"/>
+                                <Label Text="{Binding TOWN}" TextColor="Gray" FontSize="Large" Grid.Row="2" Grid.Column="1" HorizontalOptions="Start" VerticalOptions="Start" Style="{StaticResource NormalLabelStyle}"/>
+                            </Grid>
+                        </customControls:ExtendedViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
