--- a/InvMe/InvMe/View/HashtagsPage.xaml
+++ b/InvMe/InvMe/View/HashtagsPage.xaml
@@ -17,13 +17,13 @@
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <Label Text="Hashtag" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" FontSize="25" TextColor="Gray" Style="{StaticResource NormalLabelStyle}"/>
-                <Label Text="Town/Online" x:Name="townImage" Grid.Row="2" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" FontSize="25" TextColor="Gray" Style="{StaticResource NormalLabelStyle}"/>
+                <Label Text="Hashtag" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
+                <Label Text="Town" x:Name="townImage" Grid.Row="2" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
                 <Entry x:Name="hashtagEntry" Grid.Row="0" Grid.Column="1" Style="{StaticResource NormalEntryStyle}" HorizontalOptions="Fill"></Entry>
-                <Switch x:Name="onlineSwitch" Toggled="onlineSwitch_Toggled" Grid.Row="1" Grid.Column="1"></Switch>
                 <Label Grid.Row="1" Grid.Column="0" Text="Online" VerticalOptions="Center" HorizontalOptions="Center" Style="{StaticResource NormalLabelStyle}"></Label>
+                <Switch x:Name="onlineSwitch" Toggled="onlineSwitch_Toggled" Grid.Row="1" Grid.Column="1"></Switch>
                 <Entry IsVisible="True" x:Name="townEntry" Grid.Row="2" Grid.Column="1" Style="{StaticResource NormalEntryStyle}" HorizontalOptions="Fill"></Entry>
-                <Button x:Name="addButton" Text="Add hashtag" Clicked="Button_Clicked" Grid.Row="3" Grid.ColumnSpan="2" Style="{StaticResource NormalButtonStyle}"></Button>
+                <Button x:Name="addButton" Margin="15,20,15,0" Text="Add hashtag" Clicked="Button_Clicked" Grid.Row="3" Grid.ColumnSpan="2" Style="{StaticResource NormalButtonStyle}"></Button>
             </Grid>
             <ActivityIndicator x:Name="addHashtagActivator" IsRunning="False"></ActivityIndicator>
             <Grid>
@@ -34,8 +34,8 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
-                <Label Text="Hashtag" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" FontSize="30" TextColor="Gray" Style="{StaticResource NormalLabelStyle}"/>
-                <Label Text="Town/Online" Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center" FontSize="30" TextColor="Gray" Style="{StaticResource NormalLabelStyle}"/>
+                <Label Text="Hashtags" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
+                <Label Text="Places" Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
             </Grid>
             <BoxView HeightRequest="1" BackgroundColor="Black" HorizontalOptions="FillAndExpand" Margin="15,0,15,0"/>
             <ListView BackgroundColor="Transparent" ItemsSource="{Binding Bindablehashtags}" IsPullToRefreshEnabled="True" Refreshing="HashtagsListView_Refreshing" x:Name="hashtagsListView" ItemTapped="HashtagsListView_ItemTapped">
