--- a/InvMe/InvMe/View/JoinedEventPage.xaml
+++ b/InvMe/InvMe/View/JoinedEventPage.xaml
@@ -6,7 +6,7 @@
              Title="Joined events">
     <ContentPage.Content>
         <StackLayout>
-            <ListView RowHeight="100" ItemTapped="eventListView_ItemTapped" BackgroundColor="Transparent" ItemsSource="{Binding bindableEventList}" x:Name="eventListView" IsPullToRefreshEnabled="True" Refreshing="EventListView_Refreshing">
+            <ListView RowHeight="120" SeparatorColor="Gray" ItemTapped="eventListView_ItemTapped" BackgroundColor="Transparent" ItemsSource="{Binding bindableEventList}" x:Name="eventListView" IsPullToRefreshEnabled="True" Refreshing="EventListView_Refreshing">
                 <ListView.Header>
                     <StackLayout HorizontalOptions="FillAndExpand">
                         <Label x:Name="joinedEventNoItemLabel" Text="No item found..." HorizontalOptions="CenterAndExpand" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"></Label>
